--- a/src/index.css
+++ b/src/index.css
@@ -13,22 +13,32 @@ h3 {
 }
 
 button {
-  height: 30px;
+  height: 40px;
   width: 100px;
   text-align: center;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3), 0 2px 2px rgba(0, 0, 0, 0.22);
   border: none;
   border-radius: 2px;
-  background: rgb(88, 220, 255);
+  background: rgb(17, 199, 250);
   cursor: pointer;
 }
 
 button:hover {
-  background: rgb(17, 199, 250);
+  background: rgb(88, 220, 255);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3), 0 4px 4px rgba(0, 0, 0, 0.22);
+}
+
+button:disabled {
+  visibility: hidden;
 }
 
 input[type="radio"] {
   margin: 1px 10px;
+  cursor: pointer;
+}
+
+label {
+  cursor: pointer;
 }
 
 .questions-card {
@@ -47,6 +57,12 @@ input[type="radio"] {
 
 .questions-card-answers {
   flex: 1;
+  width: auto;
+  margin: auto;
+}
+
+.questions-card-answer-status {
+  padding-bottom: 10px;
   text-align: center;
 }
 
