--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ h3 {
 button {
   height: 40px;
   width: 100px;
+  font-size: 1em;
   text-align: center;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3), 0 2px 2px rgba(0, 0, 0, 0.22);
   border: none;
@@ -25,7 +26,7 @@ button {
 }
 
 button.questions-card-button-answer {
-  height: 40px;
+  height: 60px;
   width: 300px;
   font-size: 1.25em;
 }
@@ -79,6 +80,7 @@ label {
 
 .questions-card-header {
   width: 100%;
+  height: 90px;
   text-align: center;
 }
 
