--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,13 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background: rgb(88, 220, 255);
+  background: rgb(33, 150, 243);
   font-family: Helvetica, sans-serif;
+}
+
+h1 {
+  color: rgb(255, 255, 255);
+  text-align: center;
 }
 
 h3 {
@@ -21,7 +26,8 @@ button {
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3), 0 2px 2px rgba(0, 0, 0, 0.22);
   border: none;
   border-radius: 2px;
-  background: rgb(17, 199, 250);
+  color: rgb(255, 255, 255);
+  background: rgb(33, 150, 243);
   cursor: pointer;
 }
 
@@ -32,7 +38,7 @@ button.questions-card-button-answer {
 }
 
 button:hover {
-  background: rgb(88, 220, 255);
+  background: rgb(41, 159, 255);
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3), 0 4px 4px rgba(0, 0, 0, 0.22);
 }
 
@@ -97,7 +103,6 @@ label {
 
 .report-card-results {
   flex: 1;
-  width: 100%;
   font-size: 1em;
   padding: 10px;
 }
