--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,18 @@ button:disabled {
   visibility: hidden;
 }
 
+button.selected {
+  background: rgb(255, 255, 255);
+  color: black;
+  border: 3px solid rgb(33, 150, 243);
+}
+
+button.selected:hover {
+  background: rgb(255, 255, 255);
+  color: black;
+  border: 3px solid rgb(33, 150, 243);
+}
+
 input[type="radio"] {
   margin: 1px 10px;
   cursor: pointer;
